--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_preview.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_preview.xml
@@ -29,6 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:text="@string/wallet_backup_preview_hint"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
