--- a/app/src/main/res/layout/wallet_activity_about_we.xml
+++ b/app/src/main/res/layout/wallet_activity_about_we.xml
@@ -16,23 +16,128 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
+    <LinearLayout
+        android:id="@+id/ll_web_site"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_version">
+
+        <TextView
+            android:id="@+id/web_site_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="WebSite"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/web_site_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="www.baidu.com"
+            android:textColor="@color/wallet_blue" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_forum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_web_site">
+
+        <TextView
+            android:id="@+id/forum_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="WebSite"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/forum_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="www.baidu.com"
+            android:textColor="@color/wallet_blue" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_twitter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_forum">
+
+        <TextView
+            android:id="@+id/twitter_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="WebSite"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/twitter_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="www.baidu.com"
+            android:textColor="@color/wallet_blue" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_we_chat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_twitter">
+
+        <TextView
+            android:id="@+id/we_chat_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="WebSite"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/we_chat_url"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="www.baidu.com"
+            android:textColor="@color/wallet_blue" />
+    </LinearLayout>
+
     <TextView
+        android:id="@+id/tv_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:text="0.0.01"
         android:textColor="@color/wallet_text_black"
         android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="@id/icon"
         app:layout_constraintRight_toRightOf="@id/icon"
-        app:layout_constraintTop_toBottomOf="@id/name" />
+        app:layout_constraintTop_toBottomOf="@id/name"
+        tools:text="0.0.01" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="IDHUB"
+        android:text="@string/app_name"
         android:textColor="@color/wallet_text_black"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="@id/icon"
