--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_confirm.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_confirm.xml
@@ -25,9 +25,11 @@
 
     <TextView
         android:id="@+id/tv_backup_hint"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:text="@string/wallet_backup_confirm_hint"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
