--- a/app/src/main/res/layout/wallet_common_date_picker.xml
+++ b/app/src/main/res/layout/wallet_common_date_picker.xml
@@ -58,8 +58,8 @@
             android:background="@color/wallet_white"
             android:orientation="horizontal"
             android:paddingBottom="15dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:paddingTop="15dp">
 
             <com.idhub.wallet.common.date.DatePickerView
@@ -69,7 +69,7 @@
                 android:layout_weight="3" />
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -84,7 +84,7 @@
                 android:layout_weight="2" />
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -100,7 +100,7 @@
 
             <TextView
                 android:id="@+id/day_text"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -116,7 +116,7 @@
 
             <TextView
                 android:id="@+id/hour_text"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -132,7 +132,7 @@
 
             <TextView
                 android:id="@+id/minute_text"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
