--- a/app/src/main/res/layout/wallet_import_wallet_input_password_view.xml
+++ b/app/src/main/res/layout/wallet_import_wallet_input_password_view.xml
@@ -12,6 +12,7 @@
         android:background="@null"
         android:hint="@string/wallet_wallet_password"
         android:paddingTop="20dp"
+        android:inputType="textPassword"
         android:paddingBottom="5dp"
         android:textColor="@color/wallet_text_black"
         android:textColorHint="@color/wallet_hint"
@@ -27,6 +28,7 @@
         android:background="@null"
         android:hint="@string/wallet_repeat_password"
         android:paddingTop="20dp"
+        android:inputType="textPassword"
         android:paddingBottom="5dp"
         android:textColor="@color/wallet_text_black"
         android:textColorHint="@color/wallet_hint"
