--- a/app/src/main/res/layout/wallet_fragment_wallet.xml
+++ b/app/src/main/res/layout/wallet_fragment_wallet.xml
@@ -8,27 +8,21 @@
 
 
     <include
-        android:id="@+id/title"
-        layout="@layout/wallet_common_title_layout"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <include
         android:id="@+id/wallet_card"
-        layout="@layout/wallet_recyclerview_wallet_item"
+        layout="@layout/wallet_wallet_top_view"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_margin="12dp"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_assets_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="70dp"
         android:layout_marginTop="15dp"
         android:text="@string/wallet_assets"
-        android:textColor="@color/wallet_black"
-        android:textSize="26dp"
+        android:textColor="@color/wallet_input_password_text_gray"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/wallet_card" />
@@ -37,10 +31,10 @@
         android:id="@+id/add_token"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="50dp"
         android:padding="10dp"
         android:scaleType="fitXY"
-        android:src="@mipmap/wallet_add_assets"
+        android:src="@mipmap/wallet_main_add_assets"
         app:layout_constraintBottom_toBottomOf="@id/tv_assets_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_assets_title" />
