--- a/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
@@ -20,6 +20,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:includeFontPadding="false"
         android:gravity="center"
         tools:text="合规投sshavjhasjahsdgdas资者"
         android:textColor="@color/wallet_black"
