--- a/app/src/main/res/layout/wallet_activity_upload_user_basic_info.xml
+++ b/app/src/main/res/layout/wallet_activity_upload_user_basic_info.xml
@@ -16,6 +16,7 @@
         android:id="@+id/user_name"
         style="@style/WalletCommonEditText"
         android:layout_marginTop="50dp"
+        android:maxLength="10"
         app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
 
     <ImageView
