--- a/app/src/main/res/layout/wallet_fragment_me.xml
+++ b/app/src/main/res/layout/wallet_fragment_me.xml
@@ -38,6 +38,7 @@
                     android:id="@+id/upload"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/wallet_upload_icon"
                     app:layout_constraintRight_toLeftOf="@id/qrcode_scan"
@@ -47,6 +48,7 @@
                     android:id="@+id/qrcode_scan"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginRight="20dp"
                     android:src="@mipmap/wallet_qrcode_scan"
                     app:layout_constraintRight_toRightOf="parent"
@@ -69,6 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     app:layout_constraintLeft_toLeftOf="@id/qualified_investor"
+                    app:layout_constraintRight_toRightOf="@id/qualified_investor"
                     app:layout_constraintTop_toBottomOf="@id/vip_icon" />
 
                 <include
@@ -77,6 +80,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintLeft_toLeftOf="@id/qualified_purchaser"
+                    app:layout_constraintRight_toRightOf="@id/qualified_purchaser"
                     app:layout_constraintTop_toTopOf="@id/id_hub_vip" />
 
                 <include
@@ -85,6 +89,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
+                    android:layout_marginTop="5dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/qualified_purchaser"
                     app:layout_constraintTop_toBottomOf="@id/id_hub_vip" />
