--- a/app/src/main/res/layout/wallet_fragment_me_top_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_top_view.xml
@@ -8,11 +8,13 @@
 
     <ImageView
         android:id="@+id/iv_head"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         android:src="@mipmap/wallet_default_head"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,9 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp"
         android:src="@mipmap/wallet_main_setting"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_head" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -36,64 +39,75 @@
         app:layout_constraintRight_toLeftOf="@id/iv_setting"
         app:layout_constraintTop_toTopOf="@id/iv_head">
 
-        <TextView
-            android:id="@+id/tv_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/wallet_white"
-            android:textSize="17sp"
-            tools:text="Idhub did plus" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/wallet_white"
+                android:textSize="17sp"
+                tools:text="Idhub did plus" />
+
+            <TextView
+                android:id="@+id/tv_ein"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="12dp"
+                android:ellipsize="middle"
+                android:singleLine="true"
+                android:textColor="@color/wallet_white"
+                android:textSize="17sp"
+                app:layout_constraintLeft_toLeftOf="@id/iv_head"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_head"
+                tools:text="EIN:" />
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/tv_signature"
             android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
             android:textColor="@color/wallet_white"
             android:textSize="13sp"
             tools:text="Idhub did plus" />
+
+
+        <TextView
+            android:id="@+id/tv_recover_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:textColor="@color/wallet_white"
+            android:textSize="13sp"
+            app:layout_constraintLeft_toLeftOf="@id/iv_head"
+            app:layout_constraintRight_toRightOf="@id/tv_ein"
+            app:layout_constraintTop_toBottomOf="@id/tv_ein"
+            tools:text="recoverAddress:" />
+
+        <TextView
+            android:id="@+id/tv_ein_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:textColor="@color/wallet_white"
+            android:textSize="13sp"
+            app:layout_constraintLeft_toLeftOf="@id/iv_head"
+            app:layout_constraintRight_toRightOf="@id/tv_ein"
+            app:layout_constraintTop_toBottomOf="@id/tv_recover_address"
+            tools:text="erc1484::" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_ein"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="12dp"
-        android:ellipsize="middle"
-        android:singleLine="true"
-        android:textColor="@color/wallet_white"
-        android:textSize="13sp"
-        app:layout_constraintLeft_toLeftOf="@id/iv_head"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_head"
-        tools:text="EIN:" />
-
-    <TextView
-        android:id="@+id/tv_recover_address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:ellipsize="middle"
-        android:singleLine="true"
-        android:textColor="@color/wallet_white"
-        android:textSize="13sp"
-        app:layout_constraintLeft_toLeftOf="@id/iv_head"
-        app:layout_constraintRight_toRightOf="@id/tv_ein"
-        app:layout_constraintTop_toBottomOf="@id/tv_ein"
-        tools:text="recoverAddress:" />
-
-    <TextView
-        android:id="@+id/tv_ein_number"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:ellipsize="middle"
-        android:singleLine="true"
-        android:textColor="@color/wallet_white"
-        android:textSize="13sp"
-        app:layout_constraintLeft_toLeftOf="@id/iv_head"
-        app:layout_constraintRight_toRightOf="@id/tv_ein"
-        app:layout_constraintTop_toBottomOf="@id/tv_recover_address"
-        tools:text="erc1484::" />
 
 </com.idhub.wallet.me.view.MeTopView>
