--- a/app/src/main/res/layout/wallet_fragment_setting.xml
+++ b/app/src/main/res/layout/wallet_fragment_setting.xml
@@ -67,6 +67,23 @@
             app:layout_constraintTop_toBottomOf="@id/line" />
 
         <TextView
+            android:id="@+id/language"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:drawableRight="@mipmap/wallet_right_arrow"
+            android:paddingLeft="20dp"
+            android:paddingTop="20dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp"
+            android:text="@string/wallet_language"
+            android:textColor="@color/wallet_text_black"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/line2" />
+
+
+        <TextView
             android:id="@+id/user_agreement"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -81,7 +98,7 @@
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/line2" />
+            app:layout_constraintTop_toBottomOf="@id/line3" />
 
         <TextView
             android:id="@+id/about_we"
@@ -129,6 +146,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/wallet_manager" />
+
+        <View
+            android:id="@+id/line3"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginLeft="20dp"
+            android:background="@color/wallet_line_gray"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/language" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
