--- a/app/src/main/res/values-en-rUS/wallet_strings.xml
+++ b/app/src/main/res/values-en-rUS/wallet_strings.xml
@@ -393,5 +393,8 @@
     <string name="wallet_password_length">Password at least 8 characters</string>
 
     <string name="wallet_vip_my_medal">Verifiable Claims</string>
+    <string name="wallet_language">Languages</string>
+    <string name="wallet_main_back_double_click">Press again to exit the program</string>
+
 
 </resources>
