--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -365,5 +365,7 @@
     <string name="wallet_file_size_20">文件必须小于20MB</string>
     <string name="wallet_vip_my_medal">我的勋章</string>
     <string name="wallet_main_back_double_click">再按一次返回键关闭程序</string>
+    <string name="wallet_chinese">简体中文</string>
+    <string name="wallet_english">English</string>
 
 </resources>
